# lumen

./: .gitignore  README.md  biome.json  components.json  index.html  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: feature.md  fix-refactor.md  standard.md
docs/: module-api-reference.md  presenter-usage.md  websocket-access-api.md  websocket-client-events.md
docs/architecture/: broadcast-streaming-architecture.md  broadcast-streaming-plan.md  desktop-app-preview-webrtc.md  module-net-request-api.md  module-sdk-architecture.md  module-system-architecture.md  presentation-engine-plan.md  presenter-architecture.md  system-tray-background-plan.md  thumbnail-cache-architecture.md  youtube-url-media-support-plan.md
scripts/: translation-cli.ts  vite-plugin-lumen-host-modules.ts
src/: App.css  App.tsx  i18n.ts  main.tsx  routeTree.gen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: devices.rs  lib.rs  main.rs  presentation.rs  websocket.rs
src-tauri/src/commands/: conversion.rs  file.rs  mod.rs  window.rs
src-tauri/src/conversion/: mod.rs  pdf_generator.rs  pptx_extractor.rs  slide_renderer.rs
src-tauri/src/module_runtime/: dev_server.rs  install.rs  manifest.rs  mod.rs  net.rs  protocol.rs  registry.rs
src-tauri/src/streaming/: app_preview_producer.rs  config.rs  html_server.rs  manager.rs  mod.rs  signaling.rs
src-tauri/src/thumbnail/: image_thumb.rs  mod.rs  os_thumb.rs  video_thumb.rs
src/app/: __root.tsx  _layout.tsx  index.tsx  layout.tsx  media-window.tsx  module-overlay-window.tsx  page.tsx
src/components/: app-header.tsx  aside-panel.tsx  cli-test.tsx  delete-file-alert.tsx  error-boundary.tsx  file-list-item.tsx  global-alert.tsx  header.tsx  lyric-background-modal.tsx  lyric-modal.tsx  lyric-presentation.tsx  media-panel.tsx  miniplayer.tsx  player-controls.tsx  presenter-controls.tsx  preview-panel.tsx  quick-shortcuts-modal.tsx  reveal-presentation.tsx  settings-dialog.tsx  terms-modal.tsx  text-editor-bubble-menu.tsx  text-editor-toolbar.tsx  text-editor.tsx  title-bar.tsx  translation-test.tsx  video-player-modal.tsx  window-manager.tsx
src/lib/: i18n.ts  (+8 more)
(+189 files in other folders)
