[package]
name = "lumen"
version = "0.4.0"
description = "Desktop presentation software for live events — control lyrics, media, and raffles from a single interface"
authors = ["gabrielSantos1101"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-notification = "2"
tauri-plugin-websocket = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4.27"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
font-loader = "0.11"
tauri-plugin-os = "2"
sysinfo = "0.33"
webrtc = "0.11"
axum = { version = "0.7", features = ["ws"] }
openh264 = "0.9"
screenshots = "0.8.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif", "rayon"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "isomp4", "opt-simd"] }
blake3 = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "linux")'.dependencies]
md5 = "0.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[profile.dev.package.scrypt]
opt-level = 3
